WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162711
URLParser should ignore tabs at all possible locations
https://bugs.webkit.org/show_bug.cgi?id=162711
Summary
URLParser should ignore tabs at all possible locations
Alex Christensen
Reported
2016-09-28 19:10:51 PDT
URLParser should ignore tabs at all possible locations
Attachments
Patch
(24.14 KB, patch)
2016-09-28 19:14 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(28.61 KB, patch)
2016-09-28 20:36 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-28 19:14:11 PDT
Created
attachment 290161
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-28 19:17:04 PDT
Attachment 290161
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2016-09-28 20:36:13 PDT
Created
attachment 290171
[details]
Patch
Alex Christensen
Comment 4
2016-09-29 11:20:40 PDT
http://trac.webkit.org/changeset/206592
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug